Update leftpane to use use OsfUrlProperties from Dispatcher

--- a/src/main/resources/templates/fragments/leftpane.html
+++ b/src/main/resources/templates/fragments/leftpane.html
@@ -21,19 +21,19 @@
                 <ul class="left-pane-nav-list">
                     <!-- Home, Search, and Support Links -->
                     <li>
-                        <a class="navbar-link" th:href="@{${osfUrl.home}}">
+                        <a class="navbar-link" th:href="@{${dispatcherOsfUrl.home}}">
                             <img src="/images/home.svg" alt="Home">
                             Home
                         </a>
                     </li>
                     <li>
-                        <a class="navbar-link" th:href="@{${osfUrl.search}}">
+                        <a class="navbar-link" th:href="@{${dispatcherOsfUrl.search}}">
                             <img src="/images/search.svg" alt="Search">
                             Search
                         </a>
                     </li>
                     <li>
-                        <a class="navbar-link" th:href="@{${osfUrl.support}}">
+                        <a class="navbar-link" th:href="@{${dispatcherOsfUrl.support}}">
                             <img src="/images/support.svg" alt="Support">
                             Support
                         </a>
@@ -41,27 +41,27 @@
                     <br>
                     <!-- Registries, Preprints, Institutions, and Meetings -->
                     <li>
-                        <a class="navbar-link" th:href="@{${osfUrl.registries}}">
+                        <a class="navbar-link" th:href="@{${dispatcherOsfUrl.registries}}">
                             <img src="/images/registries.svg" alt="Registries">
                             Registries
                             <img class="arrow-icon" src="/images/arrow.svg" alt="Arrow">
                         </a>
                     </li>
                     <li>
-                        <a class="navbar-link" th:href="@{${osfUrl.preprints}}">
+                        <a class="navbar-link" th:href="@{${dispatcherOsfUrl.preprints}}">
                             <img src="/images/preprints.svg" alt="Preprints">
                             Preprints
                             <img class="arrow-icon" src="/images/arrow.svg" alt="Arrow">
                         </a>
                     </li>
                     <li>
-                        <a class="navbar-link" th:href="@{${osfUrl.institutionsHome}}">
+                        <a class="navbar-link" th:href="@{${dispatcherOsfUrl.institutionsHome}}">
                             <img src="/images/institutions.svg" alt="Institutions">
                             Institutions
                         </a>
                     </li>
                     <li>
-                        <a class="navbar-link" th:href="@{${osfUrl.meetings}}">
+                        <a class="navbar-link" th:href="@{${dispatcherOsfUrl.meetings}}">
                             <img src="/images/meetings.svg" alt="Meetings">
                             Meetings
                         </a>
@@ -69,7 +69,7 @@
                     <br>
                     <!-- Donate -->
                     <li>
-                        <a class="navbar-link" th:href="@{${osfUrl.donate}}">
+                        <a class="navbar-link" th:href="@{${dispatcherOsfUrl.donate}}">
                             <img src="/images/donate.svg" alt="Donate">
                             Donate
                         </a>
