Use message.properties for "Sign up" button

--- a/src/main/resources/templates/fragments/headerosf.html
+++ b/src/main/resources/templates/fragments/headerosf.html
@@ -25,7 +25,7 @@
                 <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-center">
                     <div class="form-button">
                         <a id="osfRegister" class="mdc-button mdc-button--raised button-osf-green" th:href="@{${osfUrl.register}}">
-                            <span class="mdc-button__label">Sign up</span>
+                            <span class="mdc-button__label" th:text="#{screen.welcome.button.signup}"></span>
                         </a>
                     </div>
                 </section>
