--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -1396,6 +1396,7 @@ body {
     padding: 0;
     margin: 0;
     margin-top: 2rem;
+    margin-bottom: 4rem;
 
     li {
         margin-bottom: 2rem;
