--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -29,9 +29,10 @@
         <a href="fragments/leftpane.html"></a>
     </div>
 
-    <div class="mdc-drawer-scrim"></div>
+    <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust d-flex justify-content-center main-background-gradient flex-grow-1">
 
-    <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust d-flex justify-content-center flex-grow-1">
+        <!-- Note: Sign-up button only shows up in osf layout -->
+
         <main id="main-content" class="container-lg py-4 flex-grow-1">
             <div layout:fragment="content" id="content">
             </div>
