--- a/src/main/resources/templates/layoutosf.html
+++ b/src/main/resources/templates/layoutosf.html
@@ -29,10 +29,9 @@
         <a href="fragments/leftpaneosf.html"></a>
     </div>
 
-    <div class="mdc-drawer-scrim"></div>
-
     <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust d-flex justify-content-center main-background-gradient flex-grow-1">
 
+        <!-- Sign-up botton for Desktop (wide screen) view -->
         <div class="form-button desktop-only">
             <a id="osfRegister" class="mdc-button mdc-button--raised button-osf-green sign-up-button" th:href="@{${osfUrl.register}}">
                 <span class="mdc-button__label" th:text="#{screen.welcome.button.signup}"></span>
