--- a/src/main/resources/templates/layoutosf.html
+++ b/src/main/resources/templates/layoutosf.html
@@ -33,7 +33,7 @@
 
         <!-- Sign-up botton for Desktop (wide screen) view -->
         <div class="form-button desktop-only">
-            <a id="osfRegister" class="mdc-button mdc-button--raised button-osf-green sign-up-button" th:href="@{${osfUrl.register}}">
+            <a id="osfSignUpButton" class="mdc-button mdc-button--raised button-osf-green sign-up-button" th:href="@{${osfUrl.register}}">
                 <span class="mdc-button__label" th:text="#{screen.welcome.button.signup}"></span>
             </a>
         </div>
