[ENG-8791] Inserting CasProperties into Spring Dispatcher and Improve header and left pane UI/UX (#92)
* Overlay spring-boot and sprint-webmvc classes
  * DispatcherServlet as of spring-webmvc 5.2.6.RELEASE
  * WebMvcEndpointChildContextConfiguration as of spring-boot 2.2.8.RELEASE
  * DispatcherServletAutoConfiguration as of spring-boot 2.2.8.RELEASE
* Override DispatcherServlet config and impl to support OsfUrlProperties
* Update left pane to use use OsfUrlProperties from customized Dispatcher
* Improve left pane and header for osf layout
* Sync layout, left pane and header between between default and osf
* Fix sign-up button and remove dead code

--- a/src/main/resources/templates/fragments/headerosf.html
+++ b/src/main/resources/templates/fragments/headerosf.html
@@ -16,29 +16,33 @@
         <header id="app-bar" class="mdc-top-app-bar mdc-top-app-bar--fixed mdc-elevation--z4">
             <nav class="mdc-top-app-bar__row">
 
+                <!-- OSF Logo -->
                 <section class="mdc-top-app-bar__section">
                     <span class="cas-brand mx-auto" >
                         <img class="cas-logo" src="/images/osf-logo-white.svg" alt="OSF logo">
                     </span>
                 </section>
 
+                <!-- Sign-up botton for Mobile (narrow screen) view -->
                 <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-center">
                     <div class="form-button">
-                        <a id="osfRegister" class="mdc-button mdc-button--raised button-osf-green" th:href="@{${osfUrl.register}}">
-                            <span class="mdc-button__label">Sign up</span>
+                        <a id="osfSignUpButtonAlt" class="mdc-button mdc-button--raised button-osf-green" th:href="@{${osfUrl.register}}">
+                            <span class="mdc-button__label" th:text="#{screen.welcome.button.signup}"></span>
                         </a>
                     </div>
                 </section>
 
+                <!-- Menu button for toggle navigation links on/off -->
                 <input type="checkbox" id="toggle-leftnav" class="toggle-nav-input" aria-controls='slideout-nav' hidden/>
                 <label for="toggle-leftnav" class="toggle-nav-label" aria-label="Toggle navigation menu">
                     <img src="/images/menu.svg" alt="Toggle navigation menu">
                 </label>
 
+                <!-- OSF Navigation Links -->
                 <aside id="slideout-nav" class="left-pane slideout cas-brand-text">
                     <nav class="left-pane-nav">
+                        <!-- Home, Search, and Support Links -->
                         <ul class="left-pane-nav-list">
-                            <!-- Home, Search, and Support Links -->
                             <li>
                                 <a class="navbar-link" th:href="@{${osfUrl.home}}">
                                     <img src="/images/home.svg" alt="Home">
@@ -57,8 +61,9 @@
                                     Support
                                 </a>
                             </li>
-                            <br>
-                            <!-- Registries, Preprints, Institutions, and Meetings -->
+                        </ul>
+                        <!-- Registries, Preprints, Institutions and Meetings -->
+                        <ul class="left-pane-nav-list">
                             <li>
                                 <a class="navbar-link" th:href="@{${osfUrl.registries}}">
                                     <img src="/images/registries.svg" alt="Registries">
@@ -85,8 +90,9 @@
                                     Meetings
                                 </a>
                             </li>
-                            <br>
-                            <!-- Donate -->
+                        </ul>
+                        <!-- Donate -->
+                        <ul class="left-pane-nav-list">
                             <li>
                                 <a class="navbar-link" th:href="@{${osfUrl.donate}}">
                                     <img src="/images/donate.svg" alt="Donate">
@@ -96,20 +102,21 @@
                         </ul>
                     </nav>
                 </aside>
+
             </nav>
         </header>
 
         <script type="text/javascript">
-            function disableSignUpButton() {
-                let signUpButton = document.getElementById("osfRegister");
-                if (signUpButton != null) {
-                    signUpButton.removeAttribute("href");
-                    signUpButton.style.opacity = "0.8";
-                    signUpButton.style.cursor = "not-allowed";
-                    signUpButton.style.backgroundColor = "#efefef";
-                    signUpButton.style.color = "#cccccc";
-                    signUpButton.style.visibility = "hidden";
+            function _disableButton(button){
+                if (button != null) {
+                    button.removeAttribute("href");
+                    button.style.cursor = "not-allowed";
+                    button.style.visibility = "hidden";
                 }
+            }
+            function disableSignUpButton() {
+                _disableButton(document.getElementById("osfSignUpButton"));
+                _disableButton(document.getElementById("osfSignUpButtonAlt"));
             }
         </script>
 
