Update email + password login page

--- a/src/main/resources/templates/layoutosf.html
+++ b/src/main/resources/templates/layoutosf.html
@@ -29,7 +29,7 @@
         <a href="fragments/leftpaneosf.html"></a>
     </div>
 
-    <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust d-flex justify-content-center main-background-gradient flex-grow-1">
+    <div class="flex-column mdc-top-app-bar--fixed-adjust d-flex justify-content-center main-background-gradient flex-grow-1">
 
         <!-- Sign-up botton for Desktop (wide screen) view -->
         <div class="form-button desktop-only">
