--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -29,7 +29,7 @@
         <a href="fragments/leftpane.html"></a>
     </div>
 
-    <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust d-flex justify-content-center main-background-gradient flex-grow-1">
+    <div class="flex-column mdc-top-app-bar--fixed-adjust d-flex justify-content-center main-background-gradient flex-grow-1">
 
         <!-- Note: Sign-up button only shows up in osf layout -->
 
